[gd_scene load_steps=50 format=3 uid="uid://b0m4623tpxvua"]

[ext_resource type="Script" uid="uid://bhiwhge6dfr8p" path="res://Scripts/fish.gd" id="1_8g0i4"]
[ext_resource type="Texture2D" uid="uid://loab5wse0qu7" path="res://Assets/fishIdle1.png" id="2_6lgmd"]
[ext_resource type="Texture2D" uid="uid://bni2lfb6d6jj" path="res://Assets/fishdead.png" id="2_k2ocq"]
[ext_resource type="Texture2D" uid="uid://cl78i2o0b0b2d" path="res://Assets/fishIdle2.png" id="3_wpvan"]
[ext_resource type="Texture2D" uid="uid://8nbr10e13gd2" path="res://Assets/fishIdle3.png" id="4_21k1a"]
[ext_resource type="Texture2D" uid="uid://chowao8peeyyw" path="res://Assets/fishIdle4.png" id="5_bvcvt"]
[ext_resource type="Texture2D" uid="uid://h3rxannkko1f" path="res://Assets/White_circle.png" id="6_wpvan"]
[ext_resource type="AudioStream" uid="uid://unwi2asewo8w" path="res://Assets/sounds/shoot.ogg" id="7_21k1a"]
[ext_resource type="AudioStream" uid="uid://bn4p4l65y3a7" path="res://Assets/sounds/pop.ogg" id="8_bvcvt"]
[ext_resource type="AudioStream" uid="uid://bwokt0rp8yl3y" path="res://Assets/sounds/woosh.ogg" id="9_f1s4w"]
[ext_resource type="AudioStream" uid="uid://tcoi37yllj57" path="res://Assets/sounds/damageTaken.ogg" id="10_f1s4w"]
[ext_resource type="AudioStream" uid="uid://b0rq2kucybeuw" path="res://Assets/sounds/dashrecover.ogg" id="11_3ig6q"]
[ext_resource type="AudioStream" uid="uid://lpqdxqjh2b16" path="res://Assets/sounds/swim.ogg" id="12_8hrfi"]
[ext_resource type="AudioStream" uid="uid://dbhtvoekhewm6" path="res://Assets/sounds/gameOversfx.ogg" id="12_ex20v"]
[ext_resource type="AudioStream" uid="uid://dsmags3igy0yl" path="res://Assets/sounds/whitepop.ogg" id="14_gfhab"]
[ext_resource type="AudioStream" uid="uid://cqyyhvrvrhjsl" path="res://Assets/sounds/fish/slashsfx.ogg" id="16_6j225"]
[ext_resource type="Texture2D" uid="uid://dmwhnleqf1sat" path="res://Assets/fishBullet/slash/slash0.png" id="16_8itkn"]
[ext_resource type="AudioStream" uid="uid://dlk8f73o0k6te" path="res://Assets/sounds/fish/slashlandsfx.ogg" id="17_8itkn"]
[ext_resource type="Texture2D" uid="uid://1kbba8ibehto" path="res://Assets/fishBullet/slash/slash-1.png" id="17_80fr0"]
[ext_resource type="Texture2D" uid="uid://c4a6lsfruhh67" path="res://Assets/fishBullet/slash/slash-3.png" id="19_5adjs"]
[ext_resource type="Texture2D" uid="uid://67yt0m10uiha" path="res://Assets/fishBullet/slash/slash3.png" id="21_acutr"]
[ext_resource type="Texture2D" uid="uid://bb6sm81122jne" path="res://Assets/fishBullet/slash/slash4.png" id="22_gm1cm"]
[ext_resource type="Texture2D" uid="uid://biljmjygnte0k" path="res://Assets/bubble.png" id="23_80fr0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ex20v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gfhab"]
atlas = ExtResource("2_k2ocq")
region = Rect2(0, 0, 3770, 2446)

[sub_resource type="SpriteFrames" id="SpriteFrames_nub35"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfhab")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6lgmd")
}, {
"duration": 1.0,
"texture": ExtResource("3_wpvan")
}, {
"duration": 1.0,
"texture": ExtResource("4_21k1a")
}, {
"duration": 1.0,
"texture": ExtResource("5_bvcvt")
}, {
"duration": 1.0,
"texture": ExtResource("4_21k1a")
}, {
"duration": 1.0,
"texture": ExtResource("3_wpvan")
}, {
"duration": 1.0,
"texture": ExtResource("2_6lgmd")
}, {
"duration": 1.0,
"texture": ExtResource("2_6lgmd")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_rbg1i"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.22, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.22, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-500, 0)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("blink:offset:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-54.905, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("blink:offset:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LightOccluder2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-105.45453, 8.2018465e-05)]
}

[sub_resource type="Animation" id="Animation_8itkn"]
resource_name = "counterSpin"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.033333335, 5.9127645, 6.2831855, -0.4, 0.030737877, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_80fr0"]
resource_name = "recoil"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, 0), Vector2(0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blink:offset:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(-120, -0.05, 0, 0, 1.1395264, 0, 0, -3.4757366, 0, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blink:offset:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.05, 0, 0.05, 0, 0, -0.016666668, 0, 0, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LightOccluder2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-105.45453, 8.2018465e-05), Vector2(829.0909, -8.138266e-05)]
}

[sub_resource type="Animation" id="Animation_gfhab"]
resource_name = "spin"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.033333335, -4.5, -6.2831855, -0.3, -0.21681452, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_v4axp"]
resource_name = "transSpin"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.8, -0.5, -12.566371, -0.16666667, 2.0943952, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0.22, -0.25, 0, 0.25, 0, 1e-05, -0.16666667, 0.036665, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0.22, -0.25, 0, 0.25, 0, 1e-05, -0.16666667, 0.036665, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81hvq"]
_data = {
&"RESET": SubResource("Animation_rbg1i"),
&"counterSpin": SubResource("Animation_8itkn"),
&"recoil": SubResource("Animation_80fr0"),
&"spin": SubResource("Animation_gfhab"),
&"transSpin": SubResource("Animation_v4axp")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_80fr0"]
cull_mode = 1
polygon = PackedVector2Array(-60.800007, -152.80002, -208.80002, -135.20001, -316.80002, -92.00001, -345.18567, -60.881924, -363.27057, -37.95237, -368.7747, 5.5347204, -358.55276, 42.696415, -331.81857, 79.85811, -272.84607, 113.06643, -201.60002, 137.6, -68.00001, 147.20001, -14.939699, 140.74004, 51.109497, 129.6706, 128.80002, 105.600006, 175.20001, 69.600006, 208.00002, 22.400002, 209.85468, 1.6278992, 212.00002, -22.400002, 192.80002, -56.000004, 162.76408, -77.486084, 123.20001, -107.20001, 80.80001, -123.20001, -1.6000001, -147.20001)

[sub_resource type="Animation" id="Animation_bvcvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.485, 0.81641674, 0.97, 0.43137255)]
}

[sub_resource type="Animation" id="Animation_21k1a"]
resource_name = "recover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.42),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.85, 0.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.42),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.485, 0.81641674, 0.97, 0.43137255), Color(0.485, 0.81641674, 0.97, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x24sl"]
_data = {
&"RESET": SubResource("Animation_bvcvt"),
&"recover": SubResource("Animation_21k1a")
}

[sub_resource type="Animation" id="Animation_w5vuo"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(1.25, -0.25, 0, 0.25, 0, 1, -0.00016666668, 0.083333336, 0, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(1.25, -0.25, 0, 0.25, 0, 1, -0.00016666668, 0.083333336, 0, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_dy0hy"]
resource_name = "death"
length = 1.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2, 0),
"points": PackedFloat32Array(1.5, 0, 0, 0.09697898, 0, 1.5, -0.09697898, 0.064652, 0.15302104, -0.10201301, 1e-05, -0.25, 0.166665, 0, 0),
"times": PackedFloat32Array(0, 0.58187383, 1.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2, 2),
"points": PackedFloat32Array(1.5, 0, 0, 0.09697898, 0, 1.5, -0.09697898, 0.064652, 0.15302104, -0.10201301, 1e-05, -0.25, 0.166665, 0, 0),
"times": PackedFloat32Array(0, 0.58187383, 1.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -18.5, -0.49767423, 18, 0, 0),
"times": PackedFloat32Array(0, 1.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbg1i"]
_data = {
&"RESET": SubResource("Animation_w5vuo"),
&"death": SubResource("Animation_dy0hy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_bfml3"]
radius = 10.914881

[sub_resource type="SpriteFrames" id="SpriteFrames_o23v1"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_8itkn")
}, {
"duration": 1.0,
"texture": ExtResource("17_80fr0")
}, {
"duration": 1.0,
"texture": ExtResource("19_5adjs")
}, {
"duration": 1.0,
"texture": ExtResource("21_acutr")
}, {
"duration": 1.0,
"texture": ExtResource("22_gm1cm")
}, {
"duration": 1.0,
"texture": ExtResource("16_8itkn")
}],
"loop": false,
"name": &"slash",
"speed": 30.0
}]

[sub_resource type="Gradient" id="Gradient_80fr0"]
offsets = PackedFloat32Array(0, 0.42156863)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sscus"]
gradient = SubResource("Gradient_80fr0")

[sub_resource type="Curve" id="Curve_sscus"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5adjs"]
curve = SubResource("Curve_sscus")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_akm6d"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
angular_velocity_min = -1.6093254e-05
angular_velocity_max = -1.6093254e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_5adjs")
color = Color(1, 1, 1, 0.3137255)
color_ramp = SubResource("GradientTexture1D_sscus")

[sub_resource type="Curve" id="Curve_80fr0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.47391307, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_sscus"]
curve = SubResource("Curve_80fr0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5adjs"]
particle_flag_disable_z = true
direction = Vector3(5, -5, 0)
spread = 180.0
flatness = 1.0
initial_velocity_min = 464.28998
initial_velocity_max = 464.28998
gravity = Vector3(0, -10000, 0)
scale_min = 134.94
scale_max = 134.94
scale_curve = SubResource("CurveTexture_sscus")
color = Color(1, 0.5733334, 0.19999999, 1)

[node name="fish" type="CharacterBody2D" groups=["player"]]
scale = Vector2(1.25, 1.25)
motion_mode = 1
slide_on_ceiling = false
safe_margin = 1.0
script = ExtResource("1_8g0i4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 810
position = Vector2(0, 1)
scale = Vector2(13.906297, 13.906297)
shape = SubResource("CircleShape2D_ex20v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-80, 0)
scale = Vector2(0.22, 0.22)
sprite_frames = SubResource("SpriteFrames_nub35")
animation = &"idle"
autoplay = "idle"
offset = Vector2(-500, 0)
flip_h = true

[node name="blink" type="Polygon2D" parent="AnimatedSprite2D"]
position = Vector2(2090.9092, -127.27272)
scale = Vector2(8.17054, 5.6178904)
color = Color(1, 0.67058825, 0.34117648, 1)
offset = Vector2(-54.905, 0)
polygon = PackedVector2Array(-134, -65, -141.86224, 3.236414, -214.18417, 21.845793, -143.53122, 42.88248, -118.496704, 114.08358, -79.00234, 86.65595, -46.73111, 58.255447, -40.055237, 17.800274, -52.294342, -25.89131, -76.799995, -48.800003)
uv = PackedVector2Array(-134, -65, -222, 24, -137, 84, -54, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_81hvq")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
z_index = -100
position = Vector2(-105.45453, 8.2018465e-05)
scale = Vector2(4.624652, 4.5990663)
occluder = SubResource("OccluderPolygon2D_80fr0")
sdf_collision = false

[node name="fish" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fish" groups=["player"]]
visible = false
z_index = 810
position = Vector2(0, 1)
scale = Vector2(13.906297, 13.906297)
shape = SubResource("CircleShape2D_ex20v")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.485, 0.81641674, 0.97, 0.43137255)
z_index = 60
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_wpvan")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_x24sl")
}

[node name="sounds" type="Node" parent="."]

[node name="shoot" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("7_21k1a")
pitch_scale = 1.5
max_polyphony = 2
bus = &"SFX"

[node name="pop" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("8_bvcvt")
pitch_scale = 1.5
max_polyphony = 2
bus = &"SFX"

[node name="woosh" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("9_f1s4w")
volume_db = 5.0
max_polyphony = 2
bus = &"SFX"

[node name="damage" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("10_f1s4w")
max_polyphony = 2
bus = &"SFX"

[node name="dashrecover" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("11_3ig6q")
volume_db = 5.0
max_polyphony = 2
bus = &"SFX"

[node name="deathSound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("12_ex20v")
max_polyphony = 2
bus = &"SFX"

[node name="deathPop" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("14_gfhab")
volume_db = -10.0
pitch_scale = 0.5
max_polyphony = 2
bus = &"SFX"

[node name="swim" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("12_8hrfi")
max_polyphony = 2
bus = &"SFX"

[node name="slash" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("16_6j225")
bus = &"SFX"

[node name="slashland" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("17_8itkn")
volume_db = 5.0
bus = &"SFX"

[node name="totalPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rbg1i")
}

[node name="slashhitbox" type="Area2D" parent="." groups=["playerSlash"]]
position = Vector2(5.5997925, 0)
scale = Vector2(1.3104092, 1.3104092)

[node name="CollisionShape2D" type="CollisionShape2D" parent="slashhitbox" groups=["playerSlash"]]
position = Vector2(742.4347, -2.486035)
scale = Vector2(68.5235, 53.730816)
shape = SubResource("CircleShape2D_bfml3")
disabled = true
debug_color = Color(0.9054175, 0.27341783, 0.35639855, 0.41960785)

[node name="slash" type="AnimatedSprite2D" parent="slashhitbox"]
z_index = 300
position = Vector2(761.8597, -2.486035)
scale = Vector2(2.02878, 1.8617731)
sprite_frames = SubResource("SpriteFrames_o23v1")

[node name="movebubbles" type="GPUParticles2D" parent="."]
z_index = -70
position = Vector2(0, -72.799995)
emitting = false
amount = 32
texture = ExtResource("23_80fr0")
lifetime = 2.5
fixed_fps = 0
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_akm6d")

[node name="fireParticles" type="GPUParticles2D" parent="."]
position = Vector2(9.599976, 0)
scale = Vector2(3.4999995, 3.4999995)
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_5adjs")

[connection signal="area_entered" from="fish" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="fish" to="." method="_on_area_2d_area_exited"]
[connection signal="finished" from="sounds/swim" to="." method="_on_swim_finished"]
